syntax = "proto3";

import "proto/lib/numpy/array.proto";
import "proto/lib/pycolab/position.proto";

package syft.lib.pycolab;

message Drape {
  string obj_type = 1;
  optional string character = 2;
  optional bool visible = 3;
  optional bool has_position = 4;
  optional Position position = 5;
  optional bool has_corner = 6;
  optional Position corner = 7;
  optional bool has_curtain = 8;
  optional syft.lib.numpy.NumpyProto curtain = 9;
}
